sending message not complete